--- a/GrecosQuestionnaire/Views/Hotel/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Hotel/Index.cshtml
@@ -6,24 +6,12 @@
 <div class="row">
     <div class="col-md-8"><h2>Hotele</h2></div>
     <div class="col-md-4" style="padding-top: 22px;">
-        <a href="@Url.Action("Import", "Hotel")" role="button" class="btn btn-primary pull-right">
+        <a href="@Url.Action("Import")" class="btn btn-primary pull-right">
             <span class="glyphicon glyphicon-arrow-down"></span>
             Import z systemu Magic
         </a>
     </div>
 </div>
-
-@*@using (Html.BeginForm("Import", "Hotel", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-    {
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input id="block-submit" type="submit" class="btn btn-default" value="Importuj" />
-            </div>
-        </div>
-    }*@
-
-
 
 
 <form class="navbar-form navbar-left" role="search" style="background: #3DB6DB; color: white; width: 100%; padding-bottom: 7px; padding-top: 7px;">
