--- a/GrecosQuestionnaire/Views/Hotel/AddPartner.cshtml
+++ b/GrecosQuestionnaire/Views/Hotel/AddPartner.cshtml
@@ -14,7 +14,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-primary" value="Dodaj partnera" />
+            <input type="submit" class="btn btn-primary" value="Add a partner" />
         </div>
     </div>
 </form>
