--- a/GrecosQuestionnaire/Views/MyHotels/Index.cshtml
+++ b/GrecosQuestionnaire/Views/MyHotels/Index.cshtml
@@ -3,11 +3,11 @@
 <table class="table table-striped table-hover">
     <thead>
         <tr>
-            <th>Kod Hotelu</th>
-            <th>Nazwa Hotelu</th>
-            <th>Kraj</th>
-            <th>Destynacja</th>
-            <th>Sezon</th>
+            <th>Hotel Code</th>
+            <th>Hotel Name</th>
+            <th>Country</th>
+            <th>Destination</th>
+            <th>Season</th>
             <th></th>
             <th></th>
         </tr>
