--- a/GrecosQuestionnaire/Views/Administration/CreateRole.cshtml
+++ b/GrecosQuestionnaire/Views/Administration/CreateRole.cshtml
@@ -14,7 +14,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-primary" value="Dodaj rolę" />
+            <input type="submit" class="btn btn-primary" value="Add a role" />
         </div>
     </div>
 </form>
