--- a/GrecosQuestionnaire/Views/Administration/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Administration/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
 
 @{
-    ViewData["Title"] = "Role użytkowników";
+    ViewData["Title"] = "User roles";
 }
 
 @if (Model.Any())
