--- a/GrecosQuestionnaire/Views/Hotel/Assign.cshtml
+++ b/GrecosQuestionnaire/Views/Hotel/Assign.cshtml
@@ -1,11 +1,11 @@
 ﻿@model GrecosQuestionnaire.Models.HotelModel
 
 @{
-    ViewData["Title"] = "Przypisanie partnera";
+    ViewData["Title"] = "Assigning a partner";
 }
 
 <div class="row">
-    <div class="col-md-8"><h2>Przypisanie partnera</h2></div>
+    <div class="col-md-8"><h2>Assigning a partner</h2></div>
     <div class="col-md-4" style="padding-top: 22px;">
 
     </div>
@@ -28,7 +28,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Zapisz" />
+            <input type="submit" class="btn btn-default" style="background-color:#005EA8; color:white" value="Save" />
         </div>
     </div>
 }
