--- a/GrecosQuestionnaire/Views/Question/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Question/Index.cshtml
@@ -2,29 +2,29 @@
 @model X.PagedList.IPagedList<Question>
 
 @{
-    ViewBag.Title = "Pytania";
+    ViewBag.Title = "Questions";
 }
 
 <div class="row">
-    <div class="col-md-8"><h2>Pytania</h2></div>
+    <div class="col-md-8"><h2>Questions</h2></div>
     <div class="col-md-4" style="padding-top: 22px;">
         <a href="@Url.Action("Create", "Question")" role="button" class="btn btn-primary pull-right">
             <span class="glyphicon glyphicon-plus"></span>
-            Dodaj nowe pytanie
+            Add new questions
         </a>
     </div>
 </div>
 
-@Html.ActionLink("Wróć do panelu administratora", "Index", "Home", null, null)
+@Html.ActionLink("Return to the admin panel", "Index", "Home", null, null)
 
 <table class="table table-striped table-hover">
     <thead>
         <tr>
-            <th>Strona</th>
-            <th>Kolejność</th>
-            <th>Tytuł</th>
-            <th>Podtytuł</th>
-            <th>Usunięty</th>
+            <th>Page</th>
+            <th>Order</th>
+            <th>Title</th>
+            <th>Subtitle</th>
+            <th>Removed</th>
             <th></th>
         </tr>
     </thead>
