--- a/GrecosQuestionnaire/Views/QuestionItem/Index.cshtml
+++ b/GrecosQuestionnaire/Views/QuestionItem/Index.cshtml
@@ -2,7 +2,7 @@
 @model X.PagedList.IPagedList<GrecosQuestionnaire.Models.QuestionItem>
 
 @{
-    ViewBag.Title = "Elementy pytania";
+    ViewBag.Title = "Elements of the question";
 }
 
 <div class="row">
@@ -10,12 +10,12 @@
     <div class="col-md-4" style="padding-top: 22px;">
         <a href="@Url.Action("Create", "QuestionItem", new { questionId = ViewBag.QuestionId })" role="button" class="btn btn-primary pull-right">
             <span class="glyphicon glyphicon-plus"></span>
-            Dodaj nowy element pytania
+            Add a new question item
         </a>
     </div>
 </div>
 
-@Html.ActionLink("Wróć do listy pytań", "Index", "Question")
+@Html.ActionLink("Return to the question list", "Index", "Question")
 
 @{
     var questionId = ViewBag.QuestionId;
@@ -23,9 +23,9 @@
 <table class="table table-striped table-hover">
     <thead>
         <tr>
-            <th>Rodzaj</th>
-            <th>Kolejność</th>
-            <th>Tytuł</th>
+            <th>Type</th>
+            <th>Order</th>
+            <th>Title</th>
             <th></th>
         </tr>
     </thead>
@@ -43,11 +43,11 @@
                     @item.Title
                 </td>
                 <td>
-                    <a class="btn btn-primary" href="@Url.Action("Edit", "QuestionItem", new { id = item.Id }, null)" title="Edycja">
+                    <a class="btn btn-primary" href="@Url.Action("Edit", "QuestionItem", new { id = item.Id }, null)" title="Edit">
                         Edit
                         <span class="glyphicon glyphicon-edit"></span>
                     </a>
-                    <a class="btn btn-primary" href="@Url.Action("Delete", "QuestionItem", new { id = item.Id }, null)" title="Edycja">
+                    <a class="btn btn-primary" href="@Url.Action("Delete", "QuestionItem", new { id = item.Id }, null)" title="Delete">
                         Delete
                         <span class="glyphicon glyphicon-remove"></span>
                     </a>
