--- a/GrecosQuestionnaire/Views/QuestionItem/_Create.cshtml
+++ b/GrecosQuestionnaire/Views/QuestionItem/_Create.cshtml
@@ -68,6 +68,6 @@
 
 <div class="form-group">
     <div class="col-md-offset-2 col-md-10">
-        <input type="submit" class="btn btn-default" value="Zapisz" />
+        <input type="submit" class="btn btn-default" style="background-color:#005EA8; color:white" value="Save" />
     </div>
 </div>
