--- a/GrecosQuestionnaire/Views/Shared/_Layout.cshtml
+++ b/GrecosQuestionnaire/Views/Shared/_Layout.cshtml
@@ -14,8 +14,13 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
+
+    @*<nav class="navbar fixed-top navbar-light bg-light">
+        <a class="navbar-brand" href="#">Fixed top</a>
+    </nav>*@
+
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GrecosQuestionnaire</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -69,7 +74,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="body-content" style="margin-top: 100px"; @*class="pb-3"*@>
+        <main role="main" class="body-content" style="margin-top: 100px">
             @RenderBody()
         </main>
     </div>
