--- a/GrecosQuestionnaire/Views/_ViewImports.cshtml
+++ b/GrecosQuestionnaire/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using GrecosQuestionnaire
 @using GrecosQuestionnaire.Models
+@using GrecosQuestionnaire.Data.Enum
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
