--- a/GrecosQuestionnaire/Views/Shared/_Layout.cshtml
+++ b/GrecosQuestionnaire/Views/Shared/_Layout.cshtml
@@ -17,11 +17,11 @@
     <header>
         <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GrecosQuestionnaire</a>
+                @*<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GrecosQuestionnaire</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button>*@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         @if (signInManager.IsSignedIn(User))
@@ -56,12 +56,12 @@
                             </form>
                         }
 
-                        else
+                        @*else
                         {
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="Account" asp-action="Login">Login</a>
                             </li>
-                        }
+                        }*@
                     </ul>
                 </div>
             </div>
