--- a/GrecosQuestionnaire/Views/Survey/Edit.cshtml
+++ b/GrecosQuestionnaire/Views/Survey/Edit.cshtml
@@ -32,7 +32,7 @@
             {
                 <button type="submit" class="btn btn-primary" style="background-color:#005EA8" name="action" value="back">
                     Back
-                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="glyphicon glyphicon-chevron-back"></span>
                 </button>
             }
 
@@ -82,6 +82,7 @@
 
                 <div id="@flipValue">
                     @Html.Label(question.Title, question.Title, new { @class = "control-label", @style = "font-weight: bold ;color: #005EA8; margin-bottom: 0; font-size: 1.1em;" })
+                    <spam class="glyphicon-arrow-down"></spam>
                 </div>
 
                 <div id="@panelValue">
@@ -790,7 +791,7 @@
             {
                 <button type="submit" class="btn btn-primary" style="background-color:#005EA8" name="action" value="back">
                     Back
-                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="glyphicon glyphicon-chevron-back"></span>
                 </button>
             }
 
