--- a/GrecosQuestionnaire/Views/Survey/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Survey/Index.cshtml
@@ -23,6 +23,11 @@
         @Html.Hidden("page", ViewData["page"])
         @Html.Hidden("hotel", new { hotel })
 
+        <div style="text-align: center; font-size: 24px; font-weight: 700">@ViewBag.HotelCodeName</div>
+        <div style="text-align: center; font-weight: 700">Step @ViewBag.Page / 11</div>
+        <br />
+
+
         <div style="text-align: center">
             @if (page == 1)
             {
@@ -32,7 +37,7 @@
             {
                 <button type="submit" class="btn btn-primary" style="background-color:#005EA8" name="action" value="back">
                     Back
-                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="glyphicon glyphicon-chevron-back"></span>
                 </button>
             }
 
@@ -83,6 +88,7 @@
 
                 <div id="@flipValue">
                     @Html.Label(question.Title, question.Title, new { @class = "control-label", @style = "font-weight: bold ;color: #005EA8; margin-bottom: 0; font-size: 1.1em;" })
+                    <spam class="glyphicon-arrow-down"></spam>
                 </div>
 
                 <div id="@panelValue">
@@ -791,7 +797,7 @@
             {
                 <button type="submit" class="btn btn-primary" style="background-color:#005EA8" name="action" value="back">
                     Back
-                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="glyphicon glyphicon-chevron-back"></span>
                 </button>
             }
 
