--- a/GrecosQuestionnaire/Views/Question/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Question/Index.cshtml
@@ -5,63 +5,67 @@
     ViewBag.Title = "Questions";
 }
 
-<div class="row">
-    <div class="col-md-8"><h2>Questions</h2></div>
-    <div class="col-md-4" style="padding-top: 22px;">
-        <a href="@Url.Action("Create", "Question")" role="button" class="btn btn-primary pull-right">
-            <span class="glyphicon glyphicon-plus"></span>
-            Add new questions
-        </a>
+    <div class="container">
+
+        <div class="row">
+            <div class="col-md-8"><h2>Questions</h2></div>
+            <div class="col-md-4" style="padding-top: 22px;">
+                <a href="@Url.Action("Create", "Question")" role="button" class="btn btn-primary pull-right">
+                    <span class="glyphicon glyphicon-plus"></span>
+                    Add new questions
+                </a>
+            </div>
+        </div>
+
+        @Html.ActionLink("Return to the admin panel", "Index", "Home", null, null)
+
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>Page</th>
+                    <th>Order</th>
+                    <th>Title</th>
+                    <th>Subtitle</th>
+                    <th>Removed</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @item.ItemPage
+                        </td>
+                        <td>
+                            @item.ItemOrder
+                        </td>
+                        <td>
+                            @item.Title
+                        </td>
+                        <td>
+                            @item.Subtitle
+                        </td>
+                        <td>
+                            @item.Removed
+                        </td>
+                        <td>
+                            <a class="btn btn-primary" href="@Url.Action("Index", "QuestionItem", new { questionId = @item.Id }, null)" title="Elementy">
+                                Items
+                                <span class="glyphicon glyphicon-th-list"></span>
+                            </a>
+                            <a class="btn btn-primary" href="@Url.Action("Edit", "Question", new { id = @item.Id }, null)" title="Elementy">
+                                Edit
+                                <span class="glyphicon glyphicon-edit"></span>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page, f = ViewBag.f }))
+
+        Elementów: @ViewBag.Count
+
     </div>
-</div>
-
-@Html.ActionLink("Return to the admin panel", "Index", "Home", null, null)
-
-<table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th>Page</th>
-            <th>Order</th>
-            <th>Title</th>
-            <th>Subtitle</th>
-            <th>Removed</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @item.ItemPage
-                </td>
-                <td>
-                    @item.ItemOrder
-                </td>
-                <td>
-                    @item.Title
-                </td>
-                <td>
-                    @item.Subtitle
-                </td>
-                <td>
-                    @item.Removed
-                </td>
-                <td>
-                    <a class="btn btn-primary" href="@Url.Action("Index", "QuestionItem", new { questionId = @item.Id }, null)" title="Elementy">
-                        Items
-                        <span class="glyphicon glyphicon-th-list"></span>
-                    </a>
-                    <a class="btn btn-primary" href="@Url.Action("Edit", "Question", new { id = @item.Id }, null)" title="Elementy">
-                        Edit
-                        <span class="glyphicon glyphicon-edit"></span>
-                    </a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-@Html.PagedListPager(Model, page => Url.Action("Index", new { page, f = ViewBag.f }))
-
-Elementów: @ViewBag.Count
