--- a/GrecosQuestionnaire/Views/Account/Login.cshtml
+++ b/GrecosQuestionnaire/Views/Account/Login.cshtml
@@ -4,31 +4,37 @@
     ViewBag.Title = "User Login";
 }
 
-<h1>User Login</h1>
+    <div class="container">
+        <main role="main" class="pb-3 user-data">
+            <div class="text-center">
+                <h1 class="user-data_title">User Login</h1>
+            </div>
 
-<div class="row">
-    <div class="col-md-12">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label asp-for="RememberMe">
-                        <input asp-for="RememberMe" />
-                        @Html.DisplayNameFor(m => m.RememberMe)
-                    </label>
+            <div class="row" style="align-items:center">
+                <div class="col-md-12" style="text-align:center">
+                    <form method="post">
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                        <div class="form-group">
+                            <label class="user-data_text -secondary -bolded -uppercase" asp-for="Email"></label>
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label class="user-data_text -secondary -bolded -uppercase" asp-for="Password"></label>
+                            <input asp-for="Password" class="form-control" />
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <div class="checkbox">
+                                <label class="user-data_text -secondary -bolded -uppercase" asp-for="RememberMe">
+                                    <input asp-for="RememberMe" />
+                                    @Html.DisplayNameFor(m => m.RememberMe)
+                                </label>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-danger">Login</button>
+                    </form>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
+        </main>
     </div>
-</div>
