--- a/GrecosQuestionnaire/Views/Hotel/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Hotel/Index.cshtml
@@ -1,66 +1,66 @@
 ﻿@model IEnumerable<GrecosQuestionnaire.Models.HotelModel>
 
 
+    <div class="container">
+
+        <div class="row">
+            <div class="col-md-4" style="padding-top: 22px;">
+                <a href="@Url.Action("Import")" class="btn btn-primary pull-right">
+                    <span class="glyphicon glyphicon-arrow-down"></span>
+                    Import from Magicware
+                </a>
+            </div>
+        </div>
 
 
-<div class="row">
-    <div class="col-md-8"><h2>Hotele</h2></div>
-    <div class="col-md-4" style="padding-top: 22px;">
-        <a href="@Url.Action("Import")" class="btn btn-primary pull-right">
-            <span class="glyphicon glyphicon-arrow-down"></span>
-            Import from Magicware
-        </a>
+        <form class="navbar-form navbar-left" role="search" style="background: #3DB6DB; color: white; width: 100%; padding-bottom: 7px; padding-top: 7px;">
+            Filter by: <br />
+
+        </form>
+
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>Hotel Code</th>
+                    <th>Hotel Name</th>
+                    <th>Country</th>
+                    <th>Destination</th>
+                    <th>Season</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @item.HotelCode
+                        </td>
+                        <td>
+                            @item.Name
+                        </td>
+                        <td>
+                            @item.Country
+                        </td>
+                        <td>
+                            @item.Destination
+                        </td>
+                        <td>
+                            @item.Season
+                        </td>
+                        <td>
+                            <a class="btn-lg" href="@Url.Action("Assign", "Hotel", new { id = @item.Id }, null)" title="Assign">
+                                <span class="glyphicon glyphicon-import">_</span>
+                            </a>
+                        </td>
+                        <td>
+                            @Html.DropDownListFor(model => item.HotelPartnerId, (IEnumerable<SelectListItem>)ViewBag.Partners, "Brak", new { style = "width: 150px;", @disabled = "disabled", @class = "form-control" })
+
+                            @ViewBag.Partner
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
-</div>
-
-
-<form class="navbar-form navbar-left" role="search" style="background: #3DB6DB; color: white; width: 100%; padding-bottom: 7px; padding-top: 7px;">
-    Filter by: <br />
-
-</form>
-
-<table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th>Hotel Code</th>
-            <th>Hotel Name</th>
-            <th>Country</th>
-            <th>Destination</th>
-            <th>Season</th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @item.HotelCode
-                </td>
-                <td>
-                    @item.Name
-                </td>
-                <td>
-                    @item.Country
-                </td>
-                <td>
-                    @item.Destination
-                </td>
-                <td>
-                    @item.Season
-                </td>
-                <td>
-                    <a class="btn-lg" href="@Url.Action("Assign", "Hotel", new { id = @item.Id }, null)" title="Assign">
-                        <span class="glyphicon glyphicon-import">_</span>
-                    </a>
-                </td>
-                <td>
-                    @Html.DropDownListFor(model => item.HotelPartnerId, (IEnumerable<SelectListItem>)ViewBag.Partners, "Brak", new { style = "width: 150px;",  @disabled = "disabled" , @class = "form-control" })
-                    
-                    @ViewBag.Partner
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
