--- a/GrecosQuestionnaire/Views/MyHotels/Index.cshtml
+++ b/GrecosQuestionnaire/Views/MyHotels/Index.cshtml
@@ -1,57 +1,57 @@
 ﻿@model IEnumerable<HotelModel>
+    <div class="container">
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th>Hotel Code</th>
+                <th>Hotel Name</th>
+                <th>Country</th>
+                <th>Destination</th>
+                <th>Season</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @item.HotelCode
+                    </td>
+                    <td>
+                        @item.Name
+                    </td>
+                    <td>
+                        @item.Country
+                    </td>
+                    <td>
+                        @item.Destination
+                    </td>
+                    <td>
+                        @item.Season
+                    </td>
+                    <td>
+                        @if (item.Response == true)
+                        {
+                            <a class="btn btn-primary" href="@Url.Action("Edit", "Survey", new { hotel = @item.Id }, null)" title="Elementy">
+                                Edit
+                                <span class="glyphicon glyphicon-edit"></span>
+                            </a>
+                        }
+                        else
+                        {
+                            <a class="btn btn-primary" href="@Url.Action("Index", "Survey", new { hotel = @item.Id }, null)" title="Elementy">
+                                New
+                                <span class="glyphicon glyphicon-th-list"></span>
+                            </a>
+                        }
 
-<table class="table table-striped table-hover">
-    <thead>
-        <tr>
-            <th>Hotel Code</th>
-            <th>Hotel Name</th>
-            <th>Country</th>
-            <th>Destination</th>
-            <th>Season</th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-        <tr>
-            <td>
-                @item.HotelCode
-            </td>
-            <td>
-                @item.Name
-            </td>
-            <td>
-                @item.Country
-            </td>
-            <td>
-                @item.Destination
-            </td>
-            <td>
-                @item.Season
-            </td>
-            <td>
-                @if (item.Response == true)
-                {
-                <a class="btn btn-primary" href="@Url.Action("Edit", "Survey", new { hotel = @item.Id }, null)" title="Elementy">
-                    Edit
-                    <span class="glyphicon glyphicon-edit"></span>
-                </a>
-                }
-                else
-                {
-                <a class="btn btn-primary" href="@Url.Action("Index", "Survey", new { hotel = @item.Id }, null)" title="Elementy">
-                New
-                <span class="glyphicon glyphicon-th-list"></span>
-                </a>
-                }
-
-            </td>
-            <td>
-                
-            </td>
-        </tr>
-        }
-    </tbody>
-</table>
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    </div>
