--- a/GrecosQuestionnaire/Views/Shared/_LayoutSurvey.cshtml
+++ b/GrecosQuestionnaire/Views/Shared/_LayoutSurvey.cshtml
@@ -72,7 +72,7 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid">
+    @*<div class="container-fluid">
         <main role="main" class="nmt-1 pb-3">
             <div class="row">
                 <picture class="top-banner">
@@ -88,7 +88,7 @@
                 </picture>
             </div>
         </main>
-    </div>
+    </div>*@
 
     @RenderBody()
 
