--- a/GrecosQuestionnaire/Views/QuestionItemItem/Index.cshtml
+++ b/GrecosQuestionnaire/Views/QuestionItemItem/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@using X.PagedList.Mvc.Core
-@model X.PagedList.IPagedList<GrecosQuestionnaire.Models.QuestionItem>
+@model X.PagedList.IPagedList<GrecosQuestionnaire.Models.QuestionItemItem>
 
 @{
-    ViewBag.Title = "Elements of the question";
+    ViewBag.Title = "Elements of the item question";
 }
 
     <div class="container">
@@ -10,17 +10,17 @@
         <div class="row">
             <div class="col-md-8"><h2>Pytania</h2></div>
             <div class="col-md-4" style="padding-top: 22px;">
-                <a href="@Url.Action("Create", "QuestionItem", new { questionId = ViewBag.QuestionId })" role="button" class="btn btn-primary pull-right">
+                <a href="@Url.Action("Create", "QuestionItemItem", new { questionItemId = ViewBag.QuestionItemId })" role="button" class="btn btn-primary pull-right">
                     <span class="glyphicon glyphicon-plus"></span>
                     Add a new question item
                 </a>
             </div>
         </div>
 
-        @Html.ActionLink("Return to the question list", "Index", "Question")
+        @Html.ActionLink("Return to the question list", "Index", "QuestionItem")
 
         @{
-            var questionId = ViewBag.QuestionId;
+            var questionItemId = ViewBag.QuestionItemId;
         }
         <table class="table table-striped table-hover">
             <thead>
@@ -45,15 +45,11 @@
                             @item.Title
                         </td>
                         <td>
-                            <a class="btn btn-primary" href="@Url.Action("Index", "QuestionItemItem", new { questionItemId = @item.Id }, null)" title="Elementy">
-                                Items
-                                <span class="glyphicon glyphicon-th-list"></span>
-                            </a>
-                            <a class="btn btn-primary" href="@Url.Action("Edit", "QuestionItem", new { id = item.Id }, null)" title="Edit">
+                            <a class="btn btn-primary" href="@Url.Action("Edit", "QuestionItemItem", new { id = item.Id }, null)" title="Edit">
                                 Edit
                                 <span class="glyphicon glyphicon-edit"></span>
                             </a>
-                            <a class="btn btn-primary" href="@Url.Action("Delete", "QuestionItem", new { id = item.Id }, null)" title="Delete">
+                            <a class="btn btn-primary" href="@Url.Action("Delete", "QuestionItemItem", new { id = item.Id }, null)" title="Delete">
                                 Delete
                                 <span class="glyphicon glyphicon-remove"></span>
                             </a>
@@ -63,7 +59,7 @@
             </tbody>
         </table>
 
-        @Html.PagedListPager(Model, page => Url.Action("Index", new { page, questionId, f = ViewBag.f }))
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page, questionItemId, f = ViewBag.f }))
 
         Elementów: @ViewBag.Count
 
