--- a/GrecosQuestionnaire/Views/Shared/_LoginPartial.cshtml
+++ b/GrecosQuestionnaire/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
     {
         <li class="nav-item">
             <form class="form-inline" asp-controller="Account" asp-action="Logout">
-                <button type="submit" class="nav-link btn btn-link text-dark">Wyloguj</button>
+                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
         </li>
     }
