--- a/GrecosQuestionnaire/Views/QuestionItemItem/_Create.cshtml
+++ b/GrecosQuestionnaire/Views/QuestionItemItem/_Create.cshtml
@@ -53,6 +53,14 @@
 </div>
 
 <div class="form-group">
+    @Html.LabelFor(m => m.SubClass, new { @class = "col-md-2 control-label" })
+    <div class="col-md-10">
+        @Html.TextBoxFor(m => m.SubClass, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.SubClass)
+    </div>
+</div>
+
+<div class="form-group">
     <div class="col-md-offset-2 col-md-10">
         <div class="checkbox">
             <label>
