--- a/GrecosQuestionnaire/Views/QuestionItemItem/Index.cshtml
+++ b/GrecosQuestionnaire/Views/QuestionItemItem/Index.cshtml
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        @Html.ActionLink("Return to the question list", "Index", "QuestionItem")
+        @Html.ActionLink("Return to the question list", "Index", "Question")
 
         @{
             var questionItemId = ViewBag.QuestionItemId;
