--- a/GrecosQuestionnaire/Views/Survey/Index.cshtml
+++ b/GrecosQuestionnaire/Views/Survey/Index.cshtml
@@ -531,7 +531,7 @@
                                                                         <label>
                                                                             <input type="checkbox" name="@item.Id" value="@newline"
                                                                                    @(itemValue.Contains(newline) ? "checked='checked'" : string.Empty) />
-                                                                            newline
+                                                                            @newline
                                                                         </label>
                                                                         <input type="text" name="@(item.Id + "t")" value="@ViewData[(item.Id + "t").ToString(CultureInfo.InvariantCulture)]" />
                                                                     }
@@ -590,7 +590,7 @@
                                             <label for="distancebox" class="col-sm-5 col-form-label" style="padding-left:20px">@item.Title</label>
                                             <div class="col-sm-6">
                                                 <span class="input-symbol-m">
-                                                    <input type="number" step="1" min="0" class="form-control" id="distancebox" placeholder="0,00" name="@item.Id" value="@ViewData[@item.Id.ToString(CultureInfo.InvariantCulture)]" />
+                                                    <input type="number" step="1" min="0" class="form-control" id="distancebox" placeholder="0" name="@item.Id" value="@ViewData[@item.Id.ToString(CultureInfo.InvariantCulture)]" />
                                                 </span>
                                             </div>
                                         </div>
@@ -600,7 +600,7 @@
                                         <div class="form-group row">
                                             <label for="numberbox" class="col-sm-5 col-form-label" style="padding-left:20px">@item.Title</label>
                                             <div class="col-sm-7">
-                                                <input type="number" step="0.01" min="0" class="form-control" id="numberbox" placeholder="0,00" name="@item.Id" value="@ViewData[@item.Id.ToString(CultureInfo.InvariantCulture)]" />
+                                                <input type="number" step="1" min="0" class="form-control" id="numberbox" placeholder="0" name="@item.Id" value="@ViewData[@item.Id.ToString(CultureInfo.InvariantCulture)]" />
                                             </div>
                                         </div>
                                     }
@@ -866,7 +866,7 @@
                                                     <div class="form-group row">
                                                         <label for="textbox" class="col-sm-5 col-form-label" style="padding-left:20px">@item1.Title</label>
                                                         <div class="col-sm-7">
-                                                            <input type="text" class="form-control" id="textbox" name="@item1.Id" value="@ViewData[@item1.Id.ToString(CultureInfo.InvariantCulture)]" />
+                                                            <input type="text" class="form-control" id="textbox" name="@(item1.Id + "q")" value="@ViewData[(item1.Id + "q").ToString(CultureInfo.InvariantCulture)]" />
                                                         </div>
                                                     </div>
                                                 }
@@ -1017,7 +1017,7 @@
                                                     <div class="form-group row">
                                                         <label for="numberbox" class="col-sm-5 col-form-label" style="padding-left:20px">@item1.Title</label>
                                                         <div class="col-sm-7">
-                                                            <input type="number" step="0.01" min="0" class="form-control" id="numberbox" placeholder="0,00" name="@item1.Id" value="@ViewData[@item1.Id.ToString(CultureInfo.InvariantCulture)]" />
+                                                            <input type="number" step="1" min="0" class="form-control" id="numberbox" placeholder="0" name="@item1.Id" value="@ViewData[@item1.Id.ToString(CultureInfo.InvariantCulture)]" />
                                                         </div>
                                                     </div>
                                                 }
