--- a/GrecosQuestionnaire/Views/Survey/Index - Copy.cshtml
+++ b/GrecosQuestionnaire/Views/Survey/Index - Copy.cshtml
@@ -34,7 +34,7 @@
 
 <div class="container ">
     <div class="row justify-content-md-center">
-        <div class="col-md-8" style="margin-top: 40px; ">
+        <div class="col-md-8" style="margin-top: 40px;">
 
             @using (Html.BeginForm("Index", "Survey", FormMethod.Post, new { role = "form", @style = "color: #005EA8" }))
             {
@@ -469,15 +469,14 @@
                                     }
                                     else if (item.QuestionItemType == QuestionItemType.ComboList)
                                     {
-                                        <div class="form-group row align-items-center">
                                         @if (!string.IsNullOrEmpty(item.Title))
                                         {
-                                            <div class="col-md-5 col-xs-5 col-form-label" >
+                                            <div class="col-md-@(12 - item.Parts) col-xs-@(12 - item.Parts)" style="padding-left: 5px; padding-bottom: 10px; @(i > 0 ? "margin-top: 10px;" : "padding-top: 10px")">
                                                 @item.Title
                                             </div>
                                         }
 
-                                        <div class="col-md-7 col-xs-7" style="text-align: left; font-size:small; padding-left:25px; padding-top:15px">
+                                        <div style="text-align: left; padding-left: 323px ; font-size:small;  @(i > 0 ? "margin-top: 20px;" : "padding-top: 20px")">
 
                                             @foreach (var line in item.Items.Split('\n'))
                                             {
@@ -502,7 +501,6 @@
                                                 }
                                             }
                                         </div>
-                                      </div>
                                     }
                                     else if (item.QuestionItemType == QuestionItemType.CheckList)
                                     {
@@ -589,9 +587,9 @@
                                     else if (item.QuestionItemType == QuestionItemType.DistanceBox)
                                     {
                                         <div class="form-group row">
-                                            <label for="distancebox" class="col-sm-5 col-form-label" style="padding-left:20px ; ">@item.Title</label>
+                                            <label for="distancebox" class="col-sm-5 col-form-label" style="padding-left:20px">@item.Title</label>
                                             <div class="col-sm-6">
-                                                <span class="input-symbol-m" >
+                                                <span class="input-symbol-m">
                                                     <input type="number" step="0.01" min="0" class="form-control" id="distancebox" placeholder="0,00" name="@item.Id" value="@ViewData[@item.Id.ToString(CultureInfo.InvariantCulture)]" />
                                                 </span>
                                             </div>
